Enable Heat for csit-1node and csit-verify-1node
1node-periodic will be complete in a separate patch.

Change-Id: I0729a1cd279d09a6f31593900a9c33e9f7cd1d4c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/vtn/vtn-csit-coordinator.yaml
+++ b/jjb/vtn/vtn-csit-coordinator.yaml
@@ -15,11 +15,11 @@
         - carbon:
             branch: 'master'
             jre: 'openjdk8'
-            mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+            tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
         - boron:
             branch: 'stable/boron'
             jre: 'openjdk8'
-            mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+            tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
         - beryllium:
             branch: 'stable/beryllium'
             jre: 'openjdk7'
