--- a/jjb/openflowplugin/openflowplugin-csit-longevity.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-longevity.yaml
@@ -30,7 +30,7 @@
     robot-options: '-v TEST_LENGTH:23h'
 
     # mininet image
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
     # Trigger jobs (daily)
     schedule: 'H H * * *'
