--- a/jjb/openflowplugin/openflowplugin-csit-sw-scalability-daily.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-sw-scalability-daily.yaml
@@ -29,7 +29,7 @@
     robot-options: ''
 
     # mininet image
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
     # Trigger jobs (daily)
     schedule: 'H H * * *'
