--- a/jjb/unimgr/unimgr-csit-legato.yaml
+++ b/jjb/unimgr/unimgr-csit-legato.yaml
@@ -26,7 +26,7 @@
             scope: 'all'
 
     # Mininet configuration
-    mininet-vms: 2
+    tools_system_count: 2
 
     # Features to install
     install-features: 'odl-unimgr-ui,odl-unimgr-netvirt'
@@ -35,7 +35,7 @@
     robot-options: ''
 
     # mininet image
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'ovsdb-distribution-{stream},unimgr-distribution-{stream},netvirt-distribution-{stream},genius-distribution-{stream}'
