Enable Heat for {project}-csit-3node-periodic-{functionality}-{install}-{stream}
Change-Id: I82bb89334bfd0fd552f68a8dff729e73505f997d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/openflowplugin/openflowplugin-csit-restconf-perf-daily-old.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-restconf-perf-daily-old.yaml
@@ -20,7 +20,7 @@
             scope: 'only'
 
     # Job images
-    controller-image: 'centos7-java-builder-4c-8g'
+    odl_system_flavor: '8 GB General Purpose v1'
 
     # Features to install
     install-features: 'odl-openflowplugin-flow-services-ui,odl-jolokia,decanter-collector-jmx,decanter-appender-elasticsearch'
