--- a/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
@@ -37,4 +37,4 @@
     schedule: 'H H * * *'
 
     # Controller configuration
-    controller-image: 'centos7-java-builder-4c-8g'
+    odl_system_flavor: '8 GB General Purpose v1'
