--- a/jjb/controller/controller-csit-periodic-dsbenchmark-cluster.yaml
+++ b/jjb/controller/controller-csit-periodic-dsbenchmark-cluster.yaml
@@ -38,7 +38,7 @@
 
     # ODL system image to use
     # The job uses scriptplan to set heap to 4GB, so 4GB RAM is not enough.
-    controller-image: 'centos7-java-builder-2c-8g'
+    vm_0_flavor: '8 GB General Purpose v1'
 
     build-timeout: '480'
 
