Enable Heat for {project}-csit-3node-periodic-{functionality}-{install}-{stream}
Change-Id: I82bb89334bfd0fd552f68a8dff729e73505f997d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
@@ -37,4 +37,4 @@
     schedule: 'H H * * *'
 
     # Controller configuration
-    controller-image: 'centos7-java-builder-4c-8g'
+    vm_0_flavor: '8 GB General Purpose v1'
