--- a/jjb/openflowplugin/openflowplugin-csit-bulkomatic-clustering-perf-daily-old.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-bulkomatic-clustering-perf-daily-old.yaml
@@ -20,7 +20,7 @@
             scope: 'only'
 
     # Job images
-    controller-image: 'centos7-java-builder-4c-8g'
+    vm_0_flavor: '8 GB General Purpose v1'
 
     # Features to install
     install-features: 'odl-openflowplugin-flow-services-ui,odl-openflowplugin-app-bulk-o-matic,odl-jolokia,decanter-collector-jmx,decanter-appender-elasticsearch'
