Enable Heat for {project}-csit-3node-{functionality}-{install}-{stream}
Change-Id: Id539d5bfb87965c667e54c070f516c816dd3f37d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/controller/controller-csit-clustering.yaml
+++ b/jjb/controller/controller-csit-clustering.yaml
@@ -29,7 +29,9 @@
             scope: 'all'
 
     # No tools system VMs needed in JCloud configuration
+    # TODO: Remove mininet-vms as it's deprecated in favor of vm_1_count
     mininet-vms: 0
+    tools_system_count: 0
 
     # Features to install
     install-features: 'odl-restconf,odl-clustering-test-app'
