--- a/jjb/vtn/vtn-csit-3node-manager.yaml
+++ b/jjb/vtn/vtn-csit-3node-manager.yaml
@@ -31,7 +31,9 @@
     # Robot custom options
     robot-options: ''
 
+    # TODO: Remove mininet-image as it's deprecated in favor of vm_1_image
     mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    vm_1_image: 'Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804'
 
     # Trigger jobs (upstream dependencies)
     trigger-jobs: 'openflowjava-distribution-{stream},openflowplugin-distribution-{stream},vtn-distribution-{stream}'
