--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -476,11 +476,6 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-mininet:
-            controller-image: '{controller-image}'
-            controller-vms: 3
-            mininet-image: '{mininet-image}'
-            mininet-vms: '{mininet-vms}'
 
     triggers:
         - integration-trigger-patch-submitted:
@@ -490,8 +485,24 @@
             files: 'csit/suites/{project}/**'
 
     builders:
-        - integration-copy-ssh-keys
+        # Cleanup scripts need to run first otherwise they break the infra
+        # scripts that run.
         - integration-cleanup-workspace
+        - shell: |
+              #!/bin/bash
+              # Setup openstack envirnoment file for use by
+              # the opendaylight-infra-stack macro
+              cat > $WORKSPACE/opendaylight-infra-environment.yaml << EOF
+              parameters:
+                  vm_0_count: 3
+                  vm_0_flavor: {vm_0_flavor}
+                  vm_0_image: {vm_0_image}
+                  vm_1_count: {vm_1_count}
+                  vm_1_flavor: {vm_1_flavor}
+                  vm_1_image: {vm_1_image}
+              EOF
+              echo "Contents of opendaylight-infra-environment.yaml ..."
+              cat $WORKSPACE/opendaylight-infra-environment.yaml
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
