--- a/jjb/openflowplugin/openflowplugin-patch-test.yaml
+++ b/jjb/openflowplugin/openflowplugin-patch-test.yaml
@@ -6,35 +6,20 @@
     # The project name
     project: 'openflowplugin'
 
-    feature: 'all'
-
     # Project branches
     stream:
         - carbon:
             branch: 'master'
             jdk: 'openjdk8'
-            csit-list: >
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream}
-
         - boron:
             branch: 'stable/boron'
             jdk: 'openjdk8'
-            csit-list: >
-                openflowplugin-csit-1node-flow-services-only-{stream},
-                openflowplugin-csit-1node-flow-services-all-{stream},
-                openflowplugin-csit-1node-scalability-only-{stream},
-                openflowplugin-csit-1node-cbench-performance-only-{stream},
-                openflowplugin-csit-1node-config-performance-only-{stream},
-                openflowplugin-csit-3node-clustering-only-{stream}
-
         - beryllium:
             branch: 'stable/beryllium'
             jdk: 'openjdk7'
+
+    feature:
+        - core:
             csit-list: >
                 openflowplugin-csit-1node-flow-services-only-{stream},
                 openflowplugin-csit-1node-flow-services-all-{stream},
@@ -42,4 +27,3 @@
                 openflowplugin-csit-1node-cbench-performance-only-{stream},
                 openflowplugin-csit-1node-config-performance-only-{stream},
                 openflowplugin-csit-3node-clustering-only-{stream}
-
