split autorelease fix-relative-paths step
Currently autorelease-generate-release-patches step contains
both release tag patch generation and fix-relativepaths.sh
script which is missleading.
fix-relativepaths is needed for compilation and is not related
to the release tag patches generation.
Therefore, I separated them.

Change-Id: I68643052b512a566d776d6a4cc557a5c4a6eefcf
Signed-off-by: Ravit Peretz <ravit.peretz@hpe.com>

--- a/jjb/autorelease/autorelease-macros.yaml
+++ b/jjb/autorelease/autorelease-macros.yaml
@@ -132,3 +132,10 @@
     - shell:
         !include-raw:
             - include-raw-generate-project-report.sh
+
+- builder:
+    name: autorelease-fix-relative-paths
+    builders:
+        - shell: |
+            ./scripts/fix-relativepaths.sh
+
