--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -63,6 +63,7 @@
         - autorelease-generate-taglist
         - autorelease-distribute-taglist
         - autorelease-generate-release-patches
+        - autorelease-fix-relative-paths
         - maven-target:
               maven-version: 'mvn33'
               pom: 'pom.xml'
