Add integration-infra-stack macro
This macro uses the opendaylight-infra-macro as well as includes the
integration-cleanup-workspace macro and shell script to generate the
stack environment file needed to spin up a Heat system.

Change-Id: Ica4f3a5600b56cf59daef4c79e10e0e6e16d8b12
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -256,6 +256,28 @@
 # Shell Scripts #
 #################
 
+- builder:
+    name: integration-infra-stack
+    builders:
+        - integration-cleanup-workspace
+        - shell: |
+            #!/bin/bash
+            # Setup openstack envirnoment file for use by
+            # the opendaylight-infra-stack macro
+            cat > $WORKSPACE/opendaylight-infra-environment.yaml << EOF
+            parameters:
+                vm_0_count: {vm_0_count}
+                vm_0_flavor: {vm_0_flavor}
+                vm_0_image: {vm_0_image}
+                vm_1_count: {vm_1_count}
+                vm_1_flavor: {vm_1_flavor}
+                vm_1_image: {vm_1_image}
+            EOF
+            echo "Contents of opendaylight-infra-environment.yaml ..."
+            cat $WORKSPACE/opendaylight-infra-environment.yaml
+        - opendaylight-infra-stack:
+            stack-template: '{stack-template}'
+
 # Macro: integration-copy-ssh-keys
 # Operation: Copy ssh public key used as authentication for robot
 # Used by: {project}-csit-* job templates
