--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -28,12 +28,12 @@
     mininet-vms: 1
     docker-image: 'centos7-docker-2c-4g'
     stack-template: csit-2-instance-type.yaml
-    vm_0_count: 1
-    vm_0_flavor: 4 GB General Purpose v1
-    vm_0_image: CentOS 7 - java-builder - 20161031-0802
-    vm_1_count: 1
-    vm_1_flavor: 2 GB General Purpose v1
-    vm_1_image: Ubuntu 14.04 - mininet - 20161031-0803
+    odl_system_count: 1
+    odl_system_flavor: 4 GB General Purpose v1
+    odl_system_image: CentOS 7 - java-builder - 20161031-0802
+    tools_system_count: 1
+    tools_system_flavor: 2 GB General Purpose v1
+    tools_system_image: Ubuntu 14.04 - mininet - 20161031-0803
 
     # Robot
     robot-options: ''
