Add integration-infra-stack macro
This macro uses the opendaylight-infra-macro as well as includes the
integration-cleanup-workspace macro and shell script to generate the
stack environment file needed to spin up a Heat system.

Change-Id: Ica4f3a5600b56cf59daef4c79e10e0e6e16d8b12
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -166,7 +166,8 @@
             jobs: '{trigger-jobs}'
 
     builders:
-        - integration-copy-ssh-keys
+        - integration-infra-stack:
+            stack-template: integration-infra
         - integration-cleanup-workspace
         - integration-install-robotframework
         - inject:
