Enable Heat for openstack templates
Change-Id: I59a4597008a5918c33d36f7688c11d18c2b5fd7d
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -1038,18 +1038,19 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-devstack:
-            controller-image: '{controller-image}'
-            controller-vms: 1
-            openstack-image: '{openstack-image}'
-            openstack-vms: '{openstack-vms}'
 
     triggers:
         - timed: '{schedule}'
 
     builders:
-        - integration-copy-ssh-keys
-        - integration-cleanup-workspace
+        - integration-infra-stack:
+            stack-template: '{stack-template}'
+            vm_0_count: '1'
+            vm_0_flavor: '{odl_system_flavor}'
+            vm_0_image: '{odl_system_image}'
+            vm_1_count: '{openstack_system_count}'
+            vm_1_flavor: '{openstack_system_flavor}'
+            vm_1_image: '{openstack_system_image}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
@@ -1162,18 +1163,19 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-devstack:
-            controller-image: '{controller-image}'
-            controller-vms: 3
-            openstack-image: '{openstack-image}'
-            openstack-vms: '{openstack-vms}'
 
     triggers:
         - timed: '{schedule}'
 
     builders:
-        - integration-copy-ssh-keys
-        - integration-cleanup-workspace
+        - integration-infra-stack:
+            stack-template: '{stack-template}'
+            vm_0_count: '3'
+            vm_0_flavor: '{odl_system_flavor}'
+            vm_0_image: '{odl_system_image}'
+            vm_1_count: '{openstack_system_count}'
+            vm_1_flavor: '{openstack_system_flavor}'
+            vm_1_image: '{openstack_system_image}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
