Fix validate-autorelease failure caused by 50171
Patch https://git.opendaylight.org/gerrit/50171 broke
validate-autorelease jobs because it modified a script that the job
needed and forgot to update with the new macro introduced.

Change-Id: I15a2e38735403197382554ec0a72c9fa902829a1
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-templates-java.yaml
+++ b/jjb/releng-templates-java.yaml
@@ -521,6 +521,11 @@
         - jacoco-nojava-workaround
         - autorelease-checkout-gerrit-patch
         - autorelease-generate-release-patches
+        # In a perfect world projects should be releasing separately and we consume them
+        # via a project that pulls the release bits from each project from Nexus.
+        # Keep the patches compatible with that ideal, but apply an edit
+        # to enable building in a single maven reactor afterwards.
+        - autorelease-fix-relative-paths
         - maven-target:
             maven-version: 'mvn33'
             pom: validate-pom.xml
