Enable Heat for docker templates
Change-Id: I34af08adfb501cdd7dbaee39d8f6bb8e415a0ac1
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/integration/integration-templates.yaml
+++ b/jjb/integration/integration-templates.yaml
@@ -676,19 +676,20 @@
     wrappers:
         - opendaylight-infra-wrappers:
             build-timeout: '{build-timeout}'
-        - integration-jclouds-controller-docker:
-            controller-image: '{controller-image}'
-            controller-vms: 3
-            docker-image: '{docker-image}'
-            docker-vms: 1
 
     triggers:
         - integration-csit-{install}:
             jobs: '{trigger-jobs}'
 
     builders:
-        - integration-copy-ssh-keys
-        - integration-cleanup-workspace
+        - integration-infra-stack:
+            stack-template: '{stack-template}'
+            vm_0_count: '3'
+            vm_0_flavor: '{odl_system_flavor}'
+            vm_0_image: '{odl_system_image}'
+            vm_1_count: '{docker_system_count}'
+            vm_1_flavor: '{docker_system_flavor}'
+            vm_1_image: '{docker_system_image}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
