--- a/jjb/releng-defaults.yaml
+++ b/jjb/releng-defaults.yaml
@@ -28,6 +28,9 @@
     mininet-vms: 1
     docker-image: 'centos7-docker-2c-4g'
     stack-template: csit-2-instance-type.yaml
+    docker_system_count: 1
+    docker_system_flavor: 4 GB General Purpose v1
+    docker_system_image: CentOS 7 - docker - 20161031-0802
     odl_system_count: 1
     odl_system_flavor: 4 GB General Purpose v1
     odl_system_image: CentOS 7 - java-builder - 20161031-0802
