Add Gerrit Trigger for guava21 autorelease job
Change-Id: I1f90fddd7100d12ec0f3b5adb89150b7d6fb0814
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/autorelease/autorelease-projects.yaml
+++ b/jjb/autorelease/autorelease-projects.yaml
@@ -35,7 +35,7 @@
 
     stream:
     - carbon:
-        next-release-tag: Carbon
+        next-release-tag: Guava21-Testing
         branch: 'master'
         jdk: 'openjdk8'
         integration-test: carbon
@@ -85,7 +85,22 @@
             build-timeout: '1440'
 
     triggers:
-        - timed: 'H 0 * * *'
+        - gerrit:
+            server-name: '{server-name}'
+            trigger-on:
+                - comment-added-contains-event:
+                    comment-contains-value: 'test-guava21-patches'
+            projects:
+              - project-compare-type: 'ANT'
+                project-pattern: '{project}'
+                branches:
+                  - branch-compare-type: 'ANT'
+                    branch-pattern: '**/{branch}'
+            skip-vote:
+                successful: true
+                failed: true
+                unstable: true
+                notbuilt: true
 
     builders:
         - shell: |
