--- a/jjb/integration/integration-test-jobs.yaml
+++ b/jjb/integration/integration-test-jobs.yaml
@@ -174,7 +174,7 @@
                 vtn-csit-1node-coordinator-only-{stream}
 
     # mininet image
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
 # Template: integration-csit-verify-1node-library
 # Goal: Verify changes in csit folder not covered by projects suite verify jobs (e.g. libraries or variables)
@@ -248,8 +248,14 @@
             files: 'csit/libraries/*'
 
     builders:
-        - integration-copy-ssh-keys
-        - integration-cleanup-workspace
+        - integration-infra-stack:
+            stack-template: '{stack-template}'
+            vm_0_count: '1'
+            vm_0_flavor: '{odl_system_flavor}'
+            vm_0_image: '{odl_system_image}'
+            vm_1_count: '{tools_system_count}'
+            vm_1_flavor: '{tools_system_flavor}'
+            vm_1_image: '{tools_system_image}'
         - integration-install-robotframework
         - inject:
             properties-file: 'env.properties'
