--- a/jjb/yangtools/yangtools-csit-system.yaml
+++ b/jjb/yangtools/yangtools-csit-system.yaml
@@ -9,17 +9,12 @@
     # The functionality under test
     functionality: 'system'
 
-    # Project branches. Boron for actual testing, Beryllium for sanity.
+    # Project branches.
     stream:
         - carbon:
             branch: 'master'
             jre: 'openjdk8'
-        - boron:
-            branch: 'stable/boron'
-            jre: 'openjdk8'
-        - beryllium:
-            branch: 'stable/beryllium'
-            jre: 'openjdk7'
+        # The tested component was only introduced in Carbon.
 
     install:
         - only:
