Enable Heat for csit-1node-periodic template
Change-Id: I9c95849443816e10061dc0bf2dabedf910eede8c
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/bgpcep/bgpcep-csit-bgp-ingest.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgp-ingest.yaml
@@ -41,7 +41,7 @@
     schedule: 'H H * * *'
 
     # Controller configuration
-    controller-image: 'centos7-java-builder-2c-8g'
+    odl_system_flavor: 8 GB General Purpose v1
 
 - project:
     name: bgpcep-csit-bgp-ingest-mixed
@@ -87,7 +87,7 @@
     schedule: 'H H * * *'
 
     # Controller configuration
-    controller-image: 'centos7-java-builder-2c-8g'
+    odl_system_flavor: 8 GB General Purpose v1
 
     # Plot Info
     01-plot-title: 'Number of generated updates'
