--- a/jjb/netconf/netconf-scale.yaml
+++ b/jjb/netconf/netconf-scale.yaml
@@ -43,4 +43,4 @@
     schedule: 'H H * * *'
 
     # ODL system configuration
-    controller-image: 'centos7-java-builder-2c-8g'
+    odl_system_flavor: 8 GB General Purpose v1
