--- a/jjb/openflowplugin/openflowplugin-csit-bulkomatic-perf-daily.yaml
+++ b/jjb/openflowplugin/openflowplugin-csit-bulkomatic-perf-daily.yaml
@@ -23,8 +23,8 @@
             scope: 'only'
 
     # Job images
-    controller-image: 'centos7-java-builder-4c-8g'
-    mininet-image: 'ubuntu-trusty-mininet-ovs-25-2c-2g'
+    odl_system_flavor: 8 GB General Purpose v1
+    tools_system_image: Ubuntu 14.04 - mininet-ovs-2.5 - 20161031-0804
 
     # Features to install
     install-features: 'odl-openflowplugin-flow-services-ui,odl-openflowplugin-app-bulk-o-matic,odl-jolokia,decanter-collector-jmx,decanter-appender-elasticsearch'
