--- a/jjb/bgpcep/bgpcep-csit-throughpcep.yaml
+++ b/jjb/bgpcep/bgpcep-csit-throughpcep.yaml
@@ -42,4 +42,4 @@
     schedule: 'H H * * *'
 
     # Controller configuration
-    controller-image: 'centos7-java-builder-2c-8g'
+    odl_system_flavor: 8 GB General Purpose v1
