--- a/jjb/integration/distribution/distribution-csit-userfeatures.yaml
+++ b/jjb/integration/distribution/distribution-csit-userfeatures.yaml
@@ -45,5 +45,4 @@
         integration-distribution-merge-{stream}
 
     # Controller configuration
-    controller-image: 'centos7-java-builder-2c-8g'
-
+    odl_system_flavor: 8 GB General Purpose v1
