--- a/jjb/netvirt/netvirt-legacy-csit-3node-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-legacy-csit-3node-multi-openstack.yaml
@@ -29,17 +29,17 @@
             openstack-branch: 'stable/mitaka'
             odl-ml2-branch: 'stable/mitaka'
             odl-ml2-driver-version: 'v1'
-            openstack_system_image: 'CentOS 7 - devstack - mitaka - 20170106-2237'
+            openstack_system_image: CentOS 7 - devstack - mitaka - 20170106-2237
         - newton:
             openstack-branch: 'stable/newton'
             odl-ml2-branch: 'stable/newton'
             odl-ml2-driver-version: 'v1'
-            openstack_system_image: 'CentOS 7 - devstack - newton - 20170106-2237'
+            openstack_system_image: CentOS 7 - devstack - newton - 20170106-2237
         - newton-nodl-v2:
             openstack-branch: 'stable/newton'
             odl-ml2-branch: 'stable/newton'
             odl-ml2-driver-version: 'v2'
-            openstack_system_image: 'CentOS 7 - devstack - newton - 20170106-2237'
+            openstack_system_image: CentOS 7 - devstack - newton - 20170106-2237
 
     openstack_system_count: 4
 
