schedule transparent boron/carbon to run every 4 hours
Change-Id: Ic41d3dc1a87bbe91da66008847e60ece3ae2935b
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/netvirt/netvirt-csit-1node-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-1node-multi-openstack.yaml
@@ -8,7 +8,7 @@
 
     functionality:
         - upstream-transparent:
-            schedule: 'H H * * *'
+            schedule: 'H H/4 * * *'
             sg-mode: 'transparent'
         - upstream-stateful:
             schedule: 'H H * * *'
