--- a/jjb/integration/integration-macros.yaml
+++ b/jjb/integration/integration-macros.yaml
@@ -237,6 +237,36 @@
         - opendaylight-infra-stack:
             stack-template: '{stack-template}'
 
+# Macro: integration-3-instance-type-infra-stack
+# Operation: Sets environment and then calls opendaylight-infra-stack to spin
+#            up csit lab using openstack-heat.
+# Used by: {project}-csit-* job templates
+
+- builder:
+    name: integration-3-instance-type-infra-stack
+    builders:
+        - integration-cleanup-workspace
+        - shell: |
+            #!/bin/bash
+            # Setup openstack envirnoment file for use by
+            # the opendaylight-infra-stack macro
+            cat > $WORKSPACE/opendaylight-infra-environment.yaml << EOF
+            parameters:
+                vm_0_count: {vm_0_count}
+                vm_0_flavor: {vm_0_flavor}
+                vm_0_image: {vm_0_image}
+                vm_1_count: {vm_1_count}
+                vm_1_flavor: {vm_1_flavor}
+                vm_1_image: {vm_1_image}
+                vm_2_count: {vm_2_count}
+                vm_2_flavor: {vm_2_flavor}
+                vm_2_image: {vm_2_image}
+            EOF
+            echo "Contents of opendaylight-infra-environment.yaml ..."
+            cat $WORKSPACE/opendaylight-infra-environment.yaml
+        - opendaylight-infra-stack:
+            stack-template: 'csit-3-instance-type.yaml'
+
 # Macro: integration-get-slave-addresses
 # Operation: this macro gets the IP addresses of the dynamic vms
 # Used by: {project}-csit-* job templates
