--- a/openstack-hot/csit-2-instance-type.yaml
+++ b/openstack-hot/csit-2-instance-type.yaml
@@ -27,6 +27,16 @@ parameters:
     vm_1_image:
         type: string
         description: Image to run instance on for 2nd VM type
+    vm_2_count:
+        type: number
+        description: Number of VMs for 3rd VM type
+    vm_2_flavor:
+        type: string
+        default: 1 GB General Purpose v1
+        description: Flavor to run instance on for 3rd VM type
+    vm_2_image:
+        type: string
+        description: Image to run instance on for 3rd VM type
 
 resources:
     vm_0_group:
@@ -54,6 +64,18 @@ resources:
                     index: "%index%"
                     vm_flavor: { get_param: vm_1_flavor }
                     vm_image: { get_param: vm_1_image }
+    vm_2_group:
+        type: "OS::Heat::ResourceGroup"
+        properties:
+            count: { get_param: vm_2_count }
+            resource_def:
+                type: generic-server.yaml
+                properties:
+                    job_name: { get_param: job_name }
+                    ssh_key: { get_param: silo }
+                    index: "%index%"
+                    vm_flavor: { get_param: vm_2_flavor }
+                    vm_image: { get_param: vm_2_image }
 
 outputs:
     vm_0_ips:
@@ -62,3 +84,6 @@ outputs:
     vm_1_ips:
         description: IP addresses of the 2nd vm types
         value: { get_attr: [vm_1_group, ip] }
+    vm_2_ips:
+        description: IP addresses of the 3rd vm types
+        value: { get_attr: [vm_2_group, ip] }
