--- a/jjb/netvirt/netvirt-csit-1node-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-1node-multi-openstack.yaml
@@ -16,9 +16,15 @@
         - upstream-learn:
             schedule: 'H H * * *'
             sg-mode: 'learn'
+        - gate-learn:
+            schedule: ''
+            sg-mode: 'learn'
         - gate-transparent:
             schedule: ''
             sg-mode: 'transparent'
+        - gate-stateful:
+            schedule: ''
+            sg-mode: 'stateful'
         - gate-minimal-transparent:
             schedule: ''
             sg-mode: 'transparent'
@@ -27,9 +33,6 @@
             schedule: ''
             sg-mode: 'transparent'
             testplan: '{project}-1node-tempest-openstack.txt'
-        - gate-learn:
-            schedule: ''
-            sg-mode: 'learn'
 
     stream:
         - carbon:
