--- a/jjb/netvirt/netvirt-csit-multi-openstack.yaml
+++ b/jjb/netvirt/netvirt-csit-multi-openstack.yaml
@@ -29,9 +29,15 @@
         - upstream-learn:
             schedule: 'H H * * *'
             sg-mode: 'learn'
+        - gate-learn:
+            schedule: ''
+            sg-mode: 'learn'
         - gate-transparent:
             schedule: ''
             sg-mode: 'transparent'
+        - gate-stateful:
+            schedule: ''
+            sg-mode: 'stateful'
         - gate-minimal-transparent:
             schedule: ''
             sg-mode: 'transparent'
@@ -40,9 +46,6 @@
             schedule: ''
             sg-mode: 'transparent'
             testplan: '{project}-{topology}-tempest-openstack.txt'
-        - gate-learn:
-            schedule: ''
-            sg-mode: 'learn'
 
     stream:
         - carbon:
