add ability to run stateful or transparent jobs alone and give all three (+transparent) to the current keyword
Change-Id: Iaefee6f3961eb7b79dbc433f9ea30f6c13a80b47
Signed-off-by: Jamo Luhrsen <jluhrsen@redhat.com>

--- a/jjb/netvirt/netvirt-patch-test.yaml
+++ b/jjb/netvirt/netvirt-patch-test.yaml
@@ -23,6 +23,8 @@
                 netvirt-legacy-csit-1node-openstack-basic-only-{stream}
         - current:
             csit-list: >
+                netvirt-csit-1node-openstack-mitaka-gate-learn-{stream}
+                netvirt-csit-1node-openstack-mitaka-gate-stateful-{stream}
                 netvirt-csit-1node-openstack-mitaka-gate-transparent-{stream}
         - minimal-current:
             csit-list: >
@@ -43,3 +45,9 @@
         - learn-current:
             csit-list: >
                 netvirt-csit-1node-openstack-mitaka-gate-learn-{stream}
+        - stateful-current:
+            csit-list: >
+                netvirt-csit-1node-openstack-mitaka-gate-stateful-{stream}
+        - transparent-current:
+            csit-list: >
+                netvirt-csit-1node-openstack-mitaka-gate-transparent-{stream}
