Remove jobs testing Beryllium and Boron branches of IoTDM project
Test suites for Carbon are backward incompatible and there is not enough
capacity to maintain older versions of test suites

Change-Id: Ie10741f1eae77c584ed9a897bbed10d13228b228
Signed-off-by: Tomas Janciga <tjanciga@cisco.com>

--- a/jjb/iotdm/iotdm-csit-basic.yaml
+++ b/jjb/iotdm/iotdm-csit-basic.yaml
@@ -12,15 +12,13 @@
 
     # Project branches
     stream:
+        # Removed jobs testing Beryllium and Boron branches due to
+        # backward incompatible changes in test suites for Carbon
+        # TODO: Create test suites for specific release before
+        # Carbon if needed.
         - carbon:
             branch: 'master'
             jre: 'openjdk8'
-        - boron:
-            branch: 'stable/boron'
-            jre: 'openjdk8'
-        - beryllium:
-            branch: 'stable/beryllium'
-            jre: 'openjdk7'
 
     install:
         - only:
