Resouce optimize packer verify job to single instance
* Use single instance of the job for verifying changes
  instead of starting a job for each platform and template
  combination.
* Validate provision scripts bash syntax

Change-Id: I14eceb03130b2c40404bde049b292637d5d6653c
Signed-off-by: Anil Belur <abelur@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -6,7 +6,7 @@
         - 'builder-merge'
         - 'builder-weekly'
         - 'builder-check-poms'
-        - 'builder-verify-packer-{platforms}-{templates}'
+        - 'builder-verify-packer'
         - 'builder-merge-packer-{platforms}-{templates}'
 
     platforms:
@@ -294,7 +294,7 @@
             maven-version: 'mvn33'
 
 - job-template:
-    name: 'builder-verify-packer-{platforms}-{templates}'
+    name: 'builder-verify-packer'
     project-type: freestyle
     node: centos7-java-builder-2c-8g
     concurrent: true
