Put link to current job into distribution
This is to help with tracking which Changes were tested.

Change-Id: Ieee0fae05068384dcb88b8c73e4f82f1dabaa650
Signed-off-by: Vratko Polak <vrpolak@cisco.com>

--- a/jjb/autorelease/autorelease-templates.yaml
+++ b/jjb/autorelease/autorelease-templates.yaml
@@ -62,6 +62,8 @@
             odl-global-settings: 'odl-global-settings'
         - autorelease-generate-taglist
         - autorelease-distribute-taglist
+        - distribute-job-url:
+            path: 'integration/distribution/distribution-karaf/src/main/assembly'
         - autorelease-generate-release-patches
         # In a perfect world projects should be releasing separately and we consume them
         # via a project that pulls the release bits from each project from Nexus.
