Prepend  to vm names
Change-Id: I0f2535ce3c27ea6bcf496abd0ca8777d331e7faf
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/openstack-hot/csit-2-instance-type.yaml
+++ b/openstack-hot/csit-2-instance-type.yaml
@@ -37,6 +37,7 @@ resources:
                 type: generic-server.yaml
                 properties:
                     job_name: { get_param: job_name }
+                    silo: { get_param: silo }
                     ssh_key: { get_param: silo }
                     index: "%index%"
                     vm_flavor: { get_param: vm_0_flavor }
@@ -50,6 +51,7 @@ resources:
                 type: generic-server.yaml
                 properties:
                     job_name: { get_param: job_name }
+                    silo: { get_param: silo }
                     ssh_key: { get_param: silo }
                     index: "%index%"
                     vm_flavor: { get_param: vm_1_flavor }
