Add job to cleanup stale stacks
Sometimes a job might fail to delete the heat stack at the end of the
job for an unknown reason. Add a cleanup job to run periodically and
remove these stacks if found.

This job is currently designed to run every 6 hrs.

Change-Id: Ib486c108acc15cd58bc12cc473e934d25cb38457
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -8,6 +8,7 @@
         - 'builder-check-poms'
         - 'builder-verify-packer'
         - 'builder-merge-packer-{platforms}-{templates}'
+        - 'builder-delete-stale-stacks'
 
     platforms:
         - centos
@@ -285,6 +286,32 @@
         - shell:
             !include-raw-escape:
                 - include-raw-check-poms.sh
+
+    publishers:
+        - email-notification:
+            email-recipients: '{email-recipients}'
+            email-prefix: '[releng]'
+        - opendaylight-infra-shiplogs:
+            maven-version: 'mvn33'
+
+- job-template:
+    name: 'builder-delete-stale-stacks'
+    project-type: freestyle
+    node: centos7-java-builder-2c-4g
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+
+    triggers:
+        - timed: 'H H/4 * * *'
+
+    builders:
+        - shell: !include-raw-escape: opendaylight-infra-cleanup-stale-stacks.sh
 
     publishers:
         - email-notification:
