Enable JJB weekly job
Long ago we disabled this job because we were having issues with the job
always timing out and failing. JJB has since introduced things like
parallel updates which should make this job more stable. It is good to
run something like this once a week to reset our jobs and ensure
there's no discrepency with what is in releng/builder vs the jobs in
production.

Change-Id: I11ca998c907a219c0be05d2473737a37ad6362d9
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -214,7 +214,7 @@
 
 - job-template:
     name: 'builder-weekly'
-    disabled: true
+    disabled: false
     node: jjbuilder
 
     # builder-weekly job to run JJB update weekly
@@ -248,7 +248,7 @@
 
     builders:
         - shell: |
-            jenkins-jobs --flush-cache update --recursive jjb/
+            jenkins-jobs --flush-cache update --recursive --workers 4 jjb/
 
     publishers:
         - email-notification:
