Make RTD docs job build correct branch
We can use version_slug post data to pass in the docs version to build
in ReadTheDocs.

Change-Id: I0ed5176a3216b6a115bd2bae527df4bb5b1d2c45
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/docs/docs-rtd.yaml
+++ b/jjb/docs/docs-rtd.yaml
@@ -55,8 +55,7 @@
                       pattern: docs/**/*.rst
 
     builders:
-        - shell: |
-            curl -X POST https://readthedocs.org/build/{rtdproject}
+        - shell: !include-raw-escape: docs-post-rtd.sh
 
     publishers:
         - email-notification:
