--- a/jjb/docs/docs-rtd.yaml
+++ b/jjb/docs/docs-rtd.yaml
@@ -56,7 +56,13 @@
 
     builders:
         - shell: |
-            curl -X POST https://readthedocs.org/build/{rtdproject}
+            #!/bin/bash
+            if [ $GERRIT_BRANCH == "master" ]; then
+                RTD_BUILD_VERSION=latest
+            else
+                RTD_BUILD_VERSION=${GERRIT_BRANCH/\//-}
+            fi
+            curl -X POST --data "version_slug=$RTD_BUILD_VERSION" https://readthedocs.org/build/{rtdproject}
 
     publishers:
         - email-notification:
