Fix docs-rtd curly brace escape
Didn't realize in the previous patch
I0ed5176a3216b6a115bd2bae527df4bb5b1d2c45 that we needed to escape curly
braces but keep {rtdproject} as it's a JJB variable we're passing in.

Change-Id: I7357262e12219c642f29d507087e5ea1a45496a6
Signed-off-by: Thanh Ha <thanh.ha@linuxfoundation.org>

--- a/jjb/docs/docs-rtd.yaml
+++ b/jjb/docs/docs-rtd.yaml
@@ -55,7 +55,7 @@
                       pattern: docs/**/*.rst
 
     builders:
-        - shell: !include-raw-escape: docs-post-rtd.sh
+        - shell: !include-raw: docs-post-rtd.sh
 
     publishers:
         - email-notification:
