--- a/jjb/bgpcep/bgpcep-csit-userfeatures.yaml
+++ b/jjb/bgpcep/bgpcep-csit-userfeatures.yaml
@@ -34,7 +34,7 @@
 
     # Features to install
     # *-all is for Beryllium and Boron, without -all is for Boron and Carbon.
-    install-features: 'odl-restconf,odl-bgpcep-pcep-all,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-bgpcep-pcep,odl-bgpcep-bmp,odl-jolokia'
+    install-features: 'odl-restconf,odl-bgpcep-pcep,odl-bgpcep-bgp,odl-bgpcep-bmp,odl-jolokia'
 
     # Robot custom options
     robot-options: '-v USE_NETCONF_CONNECTOR:False'
