Remove deprecated bgp "all" feature from ingest carbon jobs
Change-Id: Ia23d35532c8b08fa8c46e8298bf0dd1fc7e9898d
Signed-off-by: Peter Gubka <pgubka@cisco.com>

--- a/jjb/bgpcep/bgpcep-csit-bgp-ingest.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgp-ingest.yaml
@@ -32,7 +32,7 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-data-change-counter,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-topology'
+    install-features: 'odl-restconf,odl-bgpcep-data-change-counter,odl-bgpcep-bgp,odl-netconf-topology'
 
     # Robot custom options:
     robot-options: '-v USE_NETCONF_CONNECTOR:False -v CHECK_PERIOD_PREFIX_COUNT_SINGLE:10 -v REPETITIONS_CHANGE_COUNT_SINGLE:3 -v CHECK_PERIOD_PREFIX_COUNT_MANY:10 -v TEST_DURATION_MULTIPLIER_PREFIX_COUNT_MANY:8.0 -v REPETITIONS_CHANGE_COUNT_MANY:10 -v MULTIPLICITY_CHANGE_COUNT_MANY:600 -v TEST_DURATION_MULTIPLIER_CHANGE_COUNT_MANY:8.0 '
@@ -77,7 +77,7 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-bgpcep-data-change-counter,odl-netconf-topology'
+    install-features: 'odl-restconf,odl-bgpcep-bgp,odl-bgpcep-data-change-counter,odl-netconf-topology'
 
     # Robot custom options
     # Increase the TEST_DURATION_MULTIPLIER if the test runs in slower test environment or more complex scenario is chosen
