Remove deprecated bgp "all" feature from bgpclustering carbon jobs
Change-Id: Ic52d6fcc584ed540a7ca32f1cbc55a3d409e32ac
Signed-off-by: Peter Gubka <pgubka@cisco.com>

--- a/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
@@ -17,9 +17,11 @@
         - boron:
             branch: 'stable/boron'
             jre: 'openjdk8'
+            install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-clustered-topology'
         - beryllium:
             branch: 'stable/beryllium'
             jre: 'openjdk7'
+            install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-clustered-topology'
 
     install:
         - only:
@@ -28,7 +30,7 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-clustered-topology'
+    install-features: 'odl-restconf,odl-bgpcep-bgp,odl-netconf-clustered-topology'
 
     # Robot custom options:
     robot-options: '-v USE_NETCONF_CONNECTOR:False'
