--- a/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgpclustering.yaml
@@ -28,7 +28,7 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-clustered-topology'
+    install-features: 'odl-restconf,odl-bgpcep-bgp,odl-netconf-clustered-topology'
 
     # Robot custom options:
     robot-options: '-v USE_NETCONF_CONNECTOR:False'
