--- a/jjb/bgpcep/bgpcep-csit-throughpcep.yaml
+++ b/jjb/bgpcep/bgpcep-csit-throughpcep.yaml
@@ -17,9 +17,11 @@
         - boron:
             branch: 'stable/boron'
             jre: 'openjdk8'
+            install-features: 'odl-restconf,odl-bgpcep-pcep-all,odl-bgpcep-pcep'
         - beryllium:
             branch: 'stable/beryllium'
             jre: 'openjdk7'
+            install-features: 'odl-restconf,odl-bgpcep-pcep-all,odl-bgpcep-pcep'
 
     install:
         - only:
@@ -28,7 +30,7 @@
             scope: 'all'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-pcep-all,odl-bgpcep-pcep'
+    install-features: 'odl-restconf,odl-bgpcep-pcep'
 
     # Readiness check timeout is lowered from the suite's high default value.
     # The other options are workarounds for Sandbox not being as performant
