Remove depricated bgp "all" feature for carbon bgpclustering-ha jobs
Also clustered netconf topology is removed because it is not used in carbon

Change-Id: Id3bf98e4d2b0a14ff9cb1829051bc81b3acd37c9
Signed-off-by: Peter Gubka <pgubka@cisco.com>

--- a/jjb/bgpcep/bgpcep-csit-bgpclustering-ha.yaml
+++ b/jjb/bgpcep/bgpcep-csit-bgpclustering-ha.yaml
@@ -17,13 +17,14 @@
         - boron:
             branch: 'stable/boron'
             jre: 'openjdk8'
+            install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-clustered-topology'
 
     install:
         - only:
             scope: 'only'
 
     # Features to install
-    install-features: 'odl-restconf,odl-bgpcep-bgp-all,odl-bgpcep-bgp,odl-netconf-clustered-topology'
+    install-features: 'odl-restconf,odl-bgpcep-bgp'
 
     # Robot custom options:
     robot-options: '-v USE_NETCONF_CONNECTOR:False'
