--- a/jjb/releng-jobs.yaml
+++ b/jjb/releng-jobs.yaml
@@ -8,8 +8,11 @@
         - 'builder-check-poms'
         - 'builder-verify-packer'
         - 'builder-merge-packer-{platforms}-{templates}'
+        # OpenStack Related
         - 'builder-delete-stale-stacks'
+        # Automation for docs and jobs
         - 'builder-update-csit-tests'
+        - 'builder-update-image-list'
 
     platforms:
         - centos
@@ -314,6 +317,53 @@
 
     builders:
         - shell: !include-raw-escape: opendaylight-infra-cleanup-stale-stacks.sh
+
+    publishers:
+        - email-notification:
+            email-recipients: '{email-recipients}'
+            email-prefix: '[releng]'
+        - opendaylight-infra-shiplogs:
+            maven-version: 'mvn33'
+
+- job-template:
+    name: 'builder-update-image-list'
+    project-type: freestyle
+    node: centos7-java-builder-2c-4g
+
+    properties:
+        - opendaylight-infra-properties:
+            build-days-to-keep: 7
+
+    parameters:
+        - opendaylight-infra-parameters:
+            project: '{project}'
+            branch: '{branch}'
+            refspec: 'refs/heads/{branch}'
+            artifacts: '{archive-artifacts}'
+
+    scm:
+        - git-scm:
+            branch: '{branch}'
+
+    wrappers:
+        - opendaylight-infra-wrappers:
+            build-timeout: '{build-timeout}'
+        # Listed after to override openstack-infra-wrappers clouds.yaml definition
+        - config-file-provider:
+            files:
+                - file-id: opendaylight-private-clouds-yaml
+                  target: '$HOME/.config/openstack/clouds.yaml'
+
+    triggers:
+        # Update image list every Monday to Friday at 11:00 UTC
+        - timed: '0 11 * * 1-5'
+
+    builders:
+        - shell: !include-raw-escape: opendaylight-infra-update-image-list.sh
+        - opendaylight-infra-push-gerrit-patch:
+            project: '{project}'
+            gerrit-topic: 'releng-update-cloud-image-list'
+            gerrit-commit-message: 'Update cloud image list docs'
 
     publishers:
         - email-notification:
